Exercise 1/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: frontend
spec:
  selector:
    app: database
  ports:
  - name: database-port
    port: 5432
    protocol: TCP
    targetPort: 5432
#  type: ClusterIP
