Exercise 1/service-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server
  namespace: frontend
spec:
  selector:
    app: static-server
  ports:
  - name: static-web
    port: 80
    protocol: TCP
    targetPort: 80
#  type: ClusterIP
