Exercise 1/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  namespace: frontend
spec:
  selector:
    app: webserver
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
#  type: ClusterIP
