Exercise 1/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  namespace: frontend
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: webserver
              port:
                number: 80
          path: /
          pathType: Prefix
