Exercise 1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: frontend
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: static-server
              port:
                number: 80
          path: /static
          pathType: Prefix
        - backend:
            service:
              name: web-server
              port:
                number: 80
          path: /
          pathType: Prefix
